[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
rustls-pemfile = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
futures-util = "0.3"
futures = "0.3"
rustls = "0.20"
log = "0.4"
pretty_env_logger = "0.4"
openssl = "0.10"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
mongodb = { version = "2.1.0" }
uuid = "0.8"
tower = "0.4"
